@@ -1,3 +1,7 @@
+2012-01-28  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar-audio.c (avt_load_au): code cleanup
+
 2012-01-06  Andreas K. Foerster  <info@akfoerster.de>
 
 	* Homepage.desktop: new file
